feat: initial commit

--- a/assets/docs/scss/custom/plugins/prism/themes/_lotusdocs.scss
+++ b/assets/docs/scss/custom/plugins/prism/themes/_lotusdocs.scss
@@ -1,5 +1,5 @@
  /**
- * Lotus Docs theme
+ * Zonx Docs theme
  *
  * Adapted from a theme based on:
  * https://github.com/chriskempson/tomorrow-theme
