--- a/assets/docs/scss/custom/plugins/prism/themes/_lucario.scss
+++ b/assets/docs/scss/custom/plugins/prism/themes/_lucario.scss
@@ -4,7 +4,7 @@
 
  Ported for PrismJS by Christopher Kapic [@christopher-kapic]
 
- Adapted for Lotus Docs by Colin Wilson
+ Adapted for Zonx Docs by Colin Wilson
  Website: https://colinwilson.uk
  Twitter Handle: https://twitter.com/colinwilsonuk
 */
