--- a/assets/docs/scss/custom/plugins/prism/themes/_solarized-light.scss
+++ b/assets/docs/scss/custom/plugins/prism/themes/_solarized-light.scss
@@ -8,7 +8,7 @@ https://prismjs.com/download.html#themes=prism-solarizedlight&languages=markup+c
  Website: https://krakendev.io
  Twitter Handle: https://twitter.com/allonsykraken
 
- Adapted for Lotus Docs by Colin Wilson
+ Adapted for Zonx Docs by Colin Wilson
  Website: https://colinwilson.uk
  Twitter Handle: https://twitter.com/colinwilsonuk
 */
