--- a/assets/docs/scss/custom/plugins/prism/themes/_twilight.scss
+++ b/assets/docs/scss/custom/plugins/prism/themes/_twilight.scss
@@ -5,7 +5,7 @@ https://prismjs.com/download.html#themes=prism-twilight&languages=markup+css+cli
  Based (more or less) on the Twilight theme originally of Textmate fame.
  @author Remy Bach
 
- Adapted for Lotus Docs by Colin Wilson
+ Adapted for Zonx Docs by Colin Wilson
  Website: https://colinwilson.uk
  Twitter Handle: https://twitter.com/colinwilsonuk
 */
