--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,11 +1,3 @@
-/* Template Name: LotusLabs Docs
-   Author: Colin Wilson
-   E-mail: colin.wilson@proton.me
-   Created: October 2022
-   Version: 1.0.0
-   File Description: Main CSS file of the Landing Page template
-*/
-
 //Custom Font Variables
 $font-family-secondary:  {{ .Site.Params.secondary_font | default "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Ubuntu'" }};
 $font-family-sans-serif: {{ .Site.Params.sans_serif_font | default "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Ubuntu'" }};
@@ -49,3 +41,5 @@ $font-family-monospace:  {{ .Site.Params.mono_font | default "SFMono-Regular, Me
 {{ if .Site.Data.landing.image_compare.enable }}@import "custom/pages/image-compare-viewer";{{ end }}
 
 // @import "custom/pages/simplebar";
+
+@import "darkmode";
