--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,7 +19,7 @@
         </div>
             {{- partial "footer.html" . -}}
 
-        <!-- Lotus Docs JS -->
+        <!-- Zonx Docs JS -->
         {{ $app := resources.Get "/js/app.js" }}
         {{- if not .Site.IsServer }}
             {{- $js := (slice $app) | resources.Concat "/js/bundle.js" | minify | fingerprint "sha384" }}
