--- a/layouts/partials/docs/head.html
+++ b/layouts/partials/docs/head.html
@@ -26,7 +26,7 @@
     <meta name="keywords" content="Documentation, Hugo, Hugo Theme, Bootstrap" />
     <meta name="author" content="Colin Wilson - Lotus Labs" />
     <meta name="email" content="support@aigis.uk" />
-    <meta name="website" content="https://lotusdocs.dev" />
+    <meta name="website" content="https://zonxdocs.pages.dev" />
     <meta name="Version" content="v0.1.0" />
     <!-- favicon -->
     {{ block "favicon" . }}{{ partialCached (printf "%s/%s" ($.Scratch.Get "pathName") "head/favicon.html") . }}{{ end }}
