--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,14 @@
     <div class="container d-flex justify-content-between align-items-center">
         <!-- Logo container-->
         <a class="logo" aria-label="Home" href='{{ relLangURL "" }}'>
-            {{ with resources.Get "images/logos/mark.svg" }}
+            <span>            {{ with resources.Get "images/logos/mark.svg" }}
                 {{ .Content | safeHTML }}
+            {{ end }}
+            </span>
+            {{ with .Site.Title }}
+            <span class="logo-text">
+                {{ . }}
+            </span>
             {{ end }}
         </a>
         <!-- End Logo container-->
